--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   dartz: ^0.10.0-nullsafety.2
   equatable: ^2.0.2
   firebase_core: ^2.4.1
+  firebase_crashlytics: ^3.0.10
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.1
@@ -58,6 +59,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
+    - certificate/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
   # For details regarding adding assets from package dependencies, see
